Bump ktav dependency to 0.7, run conformance tests against spec 0.7 corpus
💘 Generated with Rush

Assisted-by: Rush:glm-5.3-flash